--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,28 @@
-
-name： Build
-开：
-  推送：
-    分支：
-      - 主人
-  pull_request：
-    类型：[已打开、同步、重新打开]
-工作机会：
-  build：
-    name： Build
-    运行时间：ubuntu-latest
-    步骤：
-      - 用途：作/checkout@v4
-        替换为：
-          fetch-depth： 0 # 应禁用浅层克隆，以便更好地进行分析。
-      - 名称：设置 JDK 21
-        使用： actions/setup-java@v4
-        替换为：
-          Java 版本： '21'
-          发行：'Temurin'
-      - name：缓存 Maven 包
-        用途：作/cache@v4
-        替换为：
-          路径：~/.m2
-          键： ${{ runner.os }}-m2-${{ hashFiles（'**/pom.xml'） }}
-          restore-keys： ${{ runner.os }}-m2
-      - name： Build
-        运行： mvn -B verify
-      - name： Build （Development）
-        运行： |
-sed -i 's|<project.branch>\s*</project.branch>|<project.branch>development</project.branch>|g' pom.xml
-mvn -B 全新安装
-      - name： 上传构件
-        使用：actions/upload-artifact@v4
-        替换为：
-          名称：CoreProtect
-          compression-level： 0 # .jar 文件已经被压缩了
-          路径：target/CoreProtect-*.jar
+name: Build
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    types: [opened, synchronize, reopened]
+jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build
+        run: mvn -B verify
